tests/ui/reborrow/custom_marker_place_conflict_parallel_field.stderr
error[E0502]: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/custom_marker_place_conflict_parallel_field.rs:18:14
   |
LL |     let b: &u64 = &a.1;
   |                   ---- immutable borrow occurs here
LL |     reborrow(a);
   |              ^ mutable borrow occurs here
LL |
LL |     let _ = b;
   |             - immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
